# cwmp_tr069v1.2

./: CMakeLists.txt  README.md  config.json  data.json
android/: CMakeLists.txt
data_model/: cwmpdata.c  operate.c  parameter.c
data_model/model/: tr181.c
include/: CwmpConfig.h  faultCode.h
include/cwmp/: CwmpConfig.h  cwmpclient.h  log.h  xml.h
include/cwmpclient/: CwmpConfig.h  backup.h  config.h  cwmp.h  cwmpclient.h  http.h  json.h  log.h  time_tool.h  xml.h
include/data_model/: cwmpdata.h  operate.h  parameter.h
include/data_model/model/: tr135.h  tr181.h
sample/: cwmpclient  cwmpdata  data.json
sample/backup/: backup.xml
sample/config/: config.json
src/: CwmpConfig.h.in  cwmpclient.c  faultCode.c  json.c  log.c  main.c  time_tool.c  xml.c
src/cwmpclient/: backup.cpp  config.cpp  cwmp.cpp  cwmpclient.cpp  http.cpp  log.cpp  time_tool.c  xml.cpp
src/data_model/: cwmpdata.c  parameter.c  time_utils.c
src/data_model/model/: tr135.c  tr181.c
